<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/event_image"
                android:scaleType="centerCrop"
                 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:orientation="vertical"
                android:padding="@dimen/dp10"
                android:background="@drawable/white_black_bottom">

                <TextView
                    android:id="@+id/tv_main_name"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/music_concert"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/dp10"
                    android:layout_marginTop="5dp"
                    android:text="@string/dutch"
                    android:textColor="@color/black"

                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/white_black_bottom">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:padding="@dimen/dp4"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/place"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"

                        android:text="@string/start"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/end"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="@dimen/dp10"
                        android:layout_marginTop="5dp"
                        android:text="@string/cost"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dp4"
                    android:layout_marginStart="@dimen/dp10">

                    <TextView
                        android:id="@+id/tv_main_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/dutch"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_main_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/dutch"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_main_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/dutch"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_main_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="@string/dutch"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/white_black_bottom"
                android:padding="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:text="@string/about"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_main_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:text="@string/about"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:padding="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/white_black_bottom">

                <Button
                    android:id="@+id/bt_main_tickets"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="34"
                    android:background="@color/lightblue"
                    android:text="@string/tickets"
                    android:textColor="@color/blue" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:id="@+id/bt_main_share"
                    android:layout_margin="3dp"
                    android:layout_weight="34"

                    android:textColor="@color/blue"
                    android:background="@color/lightblue"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calender"

                    android:layout_weight="34"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:id="@+id/bt_main_calender"
                    android:layout_margin="3dp"
                    android:textColor="@color/blue"
                    android:background="@color/lightblue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/white_black_bottom">

                <Button
                    android:id="@+id/tv_main_route"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:background="@color/lightblue"
                    android:text="@string/about"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/bt_main_route"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:autoLink="map"
                    android:background="@color/lightblue"
                    android:text="@string/route"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
